Fix line spacing

--- a/ccnaming.css
+++ b/ccnaming.css
@@ -110,4 +110,5 @@ h2 {
 .ask {
   font-weight: bold;
   font-size: 24px;
+  line-height: 29px;
 }
